tests/fixtures/invalid/min_bytes_dict.py
# Cannot call min() with Bytes, Dict[str, int]
x = min(b"hello", {"a": 1})
